Setup basic service worker

--- a/public/index.html
+++ b/public/index.html
@@ -32,5 +32,24 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script>
+      const isProduction = "%NODE_ENV%" === "production";
+
+      if (isProduction && "serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register("sw.js")
+            .then((registration) => {
+              console.log(
+                `Service Worker registered! Scope: ${registration.scope}`
+              );
+            })
+            .catch((err) => {
+              console.log(`Service Worker registration failed: ${err}`);
+            });
+        });
+      }
+    </script>
   </body>
 </html>
